--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya Bhaskar</title>
     <link rel="stylesheet" href="CSS-My Site\styles.css">
-    <link rel="icon" href="CSS-My Site\favicon (1).ico">
+    <link rel="icon" href="https://github.com/adityagit-creator/mysites/raw/main/CSS-My%20Site/favicon%20(1).ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap">
 </head>
 
 <body>
     <center>
     <div class= "top-container">
-        <img class = "top-cloud" src="C:\Users\prince\Desktop\html\CSS-My Site\cloud.jpg" alt="cloud-img"></a>
+        <img class = "top-cloud" src="https://github.com/adityagit-creator/mysites/raw/main/CSS-My%20Site/cloud.jpg" alt="cloud-img"></a>
         <h1>I'm Aditya Bhaskar.</h1>
         <h2 class = "a-programmer">a <span class ="pro">pro</span>grammer</h2>
-        <img class = "bottom-cloud" src="C:\Users\prince\Desktop\html\CSS-My Site\cloud.jpg" alt="cloud-img"></a>
-        <img class = "mountain"src="C:\Users\prince\Desktop\html\CSS-My Site\mountain.jpg" alt="mountain-img"></a>
+        <img class = "bottom-cloud" src="https://github.com/adityagit-creator/mysites/raw/main/CSS-My%20Site/cloud.jpg" alt="cloud-img"></a>
+        <img class = "mountain"src="https://github.com/adityagit-creator/mysites/raw/main/CSS-My%20Site/mountain.jpg
+" alt="mountain-img"></a>
     </div>
 
     <div class="middle-container">
@@ -30,12 +31,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="skill-image-frontend" src="C:\Users\prince\Desktop\html\CSS-My Site\skills.jpg" alt="frontend-img">
+            <img class="skill-image-frontend" src="https://github.com/adityagit-creator/mysites/raw/main/CSS-My%20Site/skills.jpg" alt="frontend-img">
             <h3>Frontend programming</h3>
             <p>Proficient with HTML and CSS, I aspire to create experiences more engaging & user-centric.</p>
           </div>
           <div class="skill-row">
-            <img class="skill-image-coding" src="C:\Users\prince\Desktop\html\CSS-My Site\programming.jpg" alt="coding-img">
+            <img class="skill-image-coding" src="https://github.com/adityagit-creator/mysites/raw/main/CSS-My%20Site/programming.jpg" alt="coding-img">
             <h3>Familiarity with different languages</h3>
             <p>Skilled with java & experienced in other languages like C, C++ & Python.</p>
           </div>
